FIX z-index to fix hover on download button

--- a/municipal_finance/static/stylesheets/table.scss
+++ b/municipal_finance/static/stylesheets/table.scss
@@ -232,3 +232,8 @@ label {
 .select2-results__option i {
   float: right;
 }
+
+// prevent boxes from getting in the way
+.article-header .downloads {
+  z-index: 10;
+}
